<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/merchantContainer"
            tools:layout_editor_absoluteX="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/dateContainer">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/receipt_merchant_label"
                android:id="@+id/merchantLabel"
        />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/receipt_merchant_name_placeholder"
                android:id="@+id/merchantTextView"
                android:layout_weight="2"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/dateContainer"
            tools:layout_editor_absoluteX="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/merchantContainer"
            app:layout_constraintBottom_toTopOf="@+id/currencyContainer">
        <TextView
                android:text="@string/receipt_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/dateLabel"
                android:layout_weight="1"
        />

        <TextView
                android:hint="@string/receipt_date_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/dateTextView"
                android:layout_weight="2"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/currencyContainer"
            android:foreground="?android:attr/selectableItemBackground"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dateContainer"
            app:layout_constraintBottom_toTopOf="@+id/separator_1">
        <TextView
                android:text="@string/receipt_currency_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/currencyLabel"
                android:layout_weight="1"/>
        <TextView
                android:hint="@string/receipt_currency_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/currencyTextView"
                android:layout_weight="2"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dashed_line"
            android:layerType="software"
            tools:ignore="ContentDescription"
            android:layout_marginTop="16dp"
            tools:layout_editor_absoluteX="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/currencyContainer"
            app:layout_constraintBottom_toTopOf="@+id/receiptItemsList"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/receiptItemsList"
            tools:layout_height="200dp"
            tools:layout_editor_absoluteX="20dp"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/separator_1"
            app:layout_constraintBottom_toTopOf="@+id/addProductBtn"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:id="@+id/addProductBtn"
            app:layout_constraintTop_toBottomOf="@id/receiptItemsList"
            app:layout_constraintBottom_toTopOf="@+id/separator_2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    <ImageView
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dashed_line"
            android:layerType="software"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="20dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addProductBtn"
            app:layout_constraintBottom_toTopOf="@+id/totalContainer"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/totalContainer"
            android:foreground="?android:attr/selectableItemBackground"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toBottomOf="@+id/separator_2"
            app:layout_constraintBottom_toTopOf="@+id/receiptItemsList">
        <TextView
                android:text="@string/receipt_total_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/totalLabel"
                android:layout_weight="1"
        />
        <TextView
                android:hint="@string/receipt_total_placeholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/totalTextView"
                android:layout_weight="2"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
